<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fondoMenu2"
        android:layout_width="410dp"
        android:layout_height="900dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSaldo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#2E7D32"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewProducto"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProductoEnvio"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/botonquimbayas1" />

    <Button
        android:id="@+id/buttonComprar"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:background="#8BC34A"
        android:text="COMPRAR"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:background="#F40000"
        android:text="Volver al menu"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewProductoEnvio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/imageViewProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaldo2" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/star_fox_ha_tenido_varios_cap_tulos_en_nintendo_desde_revolucionario_hasta_a_dejar_que_desear_las_aventuras_de_fox_mccloud_y_sus_amigos_han_tenido_algunos_tropiezos_desde_star_fox_zero_en_2016_no_hemos_tenido_ni_una_noticia_de_alg_n_juego_nuevo_remake_o_nada_por_el_estilo_qu_diablos_pas_con_star_fox"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0277BD"
        app:layout_constraintBottom_toTopOf="@+id/textViewPrecio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProducto" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="34dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#43A047"
        app:layout_constraintBottom_toTopOf="@+id/buttonComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion" />

    <TextView
        android:id="@+id/textViewPrecio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="74dp"
        android:text="Precio"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#43A047"
        app:layout_constraintBottom_toTopOf="@+id/buttonComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>